# voicemon

./: .gitignore  Dockerfile  README.md  alert_rules.yaml  cookie_survival_version.json  docker-compose.yml  grafana-datasources.yml  prometheus.yml  pyproject.toml
tests/: demo_simulator.py  test_alerts.py  test_collector.py  test_models.py  test_prometheus.py
voicemon/: __init__.py
voicemon/alerts/: __init__.py  engine.py  pagerduty.py  slack.py
voicemon/core/: __init__.py  collector.py  config.py  models.py  otel.py
voicemon/dashboards/: __init__.py  streamlit_app.py
voicemon/dashboards/grafana/: provisioning.yaml  voicemon_dashboard.json
voicemon/exporters/: __init__.py  base.py  prometheus.py  redis.py
voicemon/integrations/: __init__.py  livekit.py  pipecat.py  vapi.py
voicemon/storage/: __init__.py  schema.sql  timescale.py
voicemon/workers/: __init__.py  processor.py
